Order+OrderService + updating Product cons and models

--- a/CyberBazaECommerce/appsettings.json
+++ b/CyberBazaECommerce/appsettings.json
@@ -22,5 +22,9 @@
     "Issuer": "your_issuer",
     "Audience": "your_audience",
     "ExpireMinutes": 4320
+  },
+  "ConnectionStrings": {
+    "RedisConnectionString": "localhost:6379"
   }
+
 }
